# bookstore-fastapi

./: .gitignore  Taskfile.dist.yml  docker-compose.yml  pyproject.toml  test1.ipynb
bookstore/models/: author.py  base.py  book.py  currency.py  id.py  isbn.py  price.py  publisher.py
